Fix on CSS bug in Header
Once Header has an element with the class .left-menu and the component
LeftMenu also has a class .left-menu, LeftMenu class was overlaping
Header and breaking it up. To fix it:
- Added row and column position to Header > .left-menu, and also removed
the padding of it.

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -12,6 +12,10 @@
   grid-auto-flow: column;
   align-items: center;
   justify-content: left;
+  /* Had to be Added due to .left-menu class being used in leftMenu.css */
+  grid-column: 1;
+  grid-row: 1; 
+  padding: 0;
 }
   
 .header > .left-menu .menu-icon {
